--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -23,6 +24,7 @@
     "nodemon": "^3.1.10",
     "razorpay": "^2.9.6",
     "stripe": "^18.2.1",
-    "validator": "^13.15.15"
+    "validator": "^13.15.15",
+    "zod": "^3.25.64"
   }
 }
