--- a/backend/package.json
+++ b/backend/package.json
@@ -1,30 +1,28 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "An ecommerce web page",
-  "main": "server.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
   },
-  "author": "sakthivel",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.2",
+    "morgan": "^1.10.0",
     "multer": "^2.0.1",
-    "nodemon": "^3.1.10",
-    "razorpay": "^2.9.6",
-    "stripe": "^18.2.1",
-    "validator": "^13.15.15",
+    "streamifier": "^0.1.1",
     "zod": "^3.25.64"
   }
 }
