Changes for aws deployment

--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -19,8 +19,7 @@ jobs:
 
       - name: Create .env file
         run: |
-          echo "REACT_APP_ADMIN_API_URL=${{ secrets.REACT_APP_ADMIN_API_URL }}" >> .env
-          echo "REACT_APP_AUTH_KEY=${{ secrets.REACT_APP_AUTH_KEY }}" >> .env
+          echo "VITE_BACKEND_URL=${{ secrets.VITE_ADMIN_BACKEND_URL }}" >> .env
 
       - name: Install dependencies
         run: npm install
