--- a/.github/workflows/seller.yml
+++ b/.github/workflows/seller.yml
@@ -1,40 +1,10 @@
-name: Deploy Admin to S3
-
-on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'seller/**'
-
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: seller
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Create .env file
-        run: |
-          echo "VITE_BACKEND_URL=${{ secrets.VITE_SELLER_BACKEND_URL }}" >> .env
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build the app
-        run: npm run build
-
-      - name: Deploy to S3
-        uses: jakejarvis/s3-sync-action@master
-        with:
-          args: --delete
-        env:
-          AWS_S3_BUCKET: ${{ secrets.seller_BUCKET_NAME }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          SOURCE_DIR: build
+- name: Deploy to S3
+  uses: jakejarvis/s3-sync-action@master
+  with:
+    args: --delete
+  env:
+    AWS_S3_BUCKET: ${{ secrets.SELLER_BUCKET_NAME }}
+    AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    AWS_REGION: ${{ secrets.AWS_REGION }}
+    SOURCE_DIR: seller/dist
