--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,10 +1,47 @@
-- name: Deploy to S3
-  uses: jakejarvis/s3-sync-action@master
-  with:
-    args: --delete
-  env:
-    AWS_S3_BUCKET: ${{ secrets.FRONTEND_BUCKET_NAME }}
-    AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    AWS_REGION: ${{ secrets.AWS_REGION }}
-    SOURCE_DIR: frontend/dist
+name: Deploy Frontend to S3
+
+on:
+  push:
+    branches:
+      - main
+    paths:
+      - 'frontend/**'
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Create .env file
+        working-directory: frontend
+        run: |
+          echo "VITE_BACKEND_URL=${{ secrets.VITE_FRONTEND_BACKEND_URL }}" > .env
+
+      - name: Install dependencies
+        working-directory: frontend
+        run: npm install
+
+      - name: Build the app
+        working-directory: frontend
+        run: npm run build
+
+      - name: List dist folder before deploy
+        run: ls -R frontend/dist
+
+      - name: Deploy to S3
+        uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --delete
+        env:
+          AWS_S3_BUCKET: ${{ secrets.FRONTEND_BUCKET_NAME }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          SOURCE_DIR: frontend/dist
